# rpsmon

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: rps.rb
src/: app.rs  banner.txt  config.rs  events.rs  keys.rs  main.rs  process.rs  process.rs.bak  sort.rs  sparkline.rs  theme.rs  ui.rs
src/widgets/: cpu.rs  disk.rs  hardware.rs  memory.rs  mod.rs  network.rs  proc_detail.rs  proc_list.rs  sysinfo_bar.rs  system_info.rs
