[package]
name = "rpsmon"
version = "0.1.1"
edition = "2021"
default-run = "rpsmon"
authors = ["tryh4rd-26 <das.adriteyo@gmail.com>"]
description = "Advanced system resource monitor with beautiful TUI graphs and detailed process insights"
license = "MIT"
repository = "https://github.com/tryh4rd-26/rpsmon"
homepage = "https://github.com/tryh4rd-26/rpsmon"
readme = "README.md"
keywords = ["monitor", "tui", "system", "process", "resource"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

[profile.release]
lto = true
strip = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

